force-app/main/default/objects/NC_Bonus_Commission__c/NC_Bonus_Commission__c.object-meta.xml
<CustomObject>
    <label>Bonus Commission</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Bonus Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>