force-app/main/default/objects/NC_Bonus_Commission__c/fields/Bonus_Level__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Level__c</fullName>
    <label>Bonus Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>