force-app/main/default/objects/NC_Bonus_Commission__c/fields/Paid_per_1_of_Target_Earned__c.field-meta.xml
<CustomField>
    <fullName>Paid_per_1_of_Target_Earned__c</fullName>
    <label>$ Paid per 1% of Target Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>