force-app/main/default/objects/NC_Bonus_Commission__c/fields/Target_Achieved_Low__c.field-meta.xml
<CustomField>
    <fullName>Target_Achieved_Low__c</fullName>
    <label>Target Achieved Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>