force-app/main/default/objects/NC_Bonus_Commission__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>